# pyratatui

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  extract.yml  gendocs.yml  mkdocs.yml
docs/: faq.md  index.md  installation.md
docs/examples/: advanced_examples.md  minimal_examples.md
docs/reference/: api_surface.md  bar_graph.md  buffer.md  calendar.md  effects.md  image_widget.md  layout.md  logger.md  markdown.md  popups.md  prompts.md  qrcode.md  scrollview.md  style.md  terminal.md  text.md  textarea.md  tree_widget.md  widgets.md
docs/tutorial/: async_updates.md  effect_workflow.md  progress_bar.md  quickstart.md  table_updates.md  tachyonfx_effects.md
examples/: 01_hello_world.py  02_layout.py  03_styled_text.py  04_list_navigation.py  05_progress_bar.py  06_table_dynamic.py  07_async_reactive.py  08_effects_fade.py  09_effects_dsl.py  10_full_app.py  11_popup_basic.py  12_popup_stateful.py  13_popup_scrollable.py  14_textarea_basic.py  15_textarea_advanced.py  16_scrollview.py  17_qrcode.py  18_async_progress.py  19_effects_glitch.py  20_effects_matrix.py  21_prompt_confirm.py  22_prompt_select.py  23_prompt_text.py  24_dashboard.py  25_calendar.py  26_bar_graph.py  27_tree_widget.py  28_markdown_renderer.py  29_logger_demo.py  30_image_view.py  async_progress.py  dashboard.py  effects_glitch.py  effects_matrix.py  prompt_confirm.py  prompt_select.py  prompt_text.py
examples/advanced_examples/: index.html
examples/minimal_examples/: index.html
faq/: index.html
installation/: index.html
python/pyratatui/: __init__.py  __init__.pyi  async_terminal.py  helpers.py
reference/api_surface/: index.html
reference/bar_graph/: index.html
reference/buffer/: index.html
reference/calendar/: index.html
reference/effects/: index.html
reference/image_widget/: index.html
reference/layout/: index.html
reference/logger/: index.html
reference/markdown/: index.html
reference/popups/: index.html
reference/prompts/: index.html
reference/qrcode/: index.html
reference/scrollview/: index.html
reference/style/: index.html
reference/terminal/: index.html
reference/text/: index.html
reference/textarea/: index.html
reference/tree_widget/: index.html
reference/widgets/: index.html
scripts/: build.ps1  build.sh  format.ps1  format.sh
search/: search_index.json
src/: lib.rs
src/backend/: mod.rs
src/bar_graph/: mod.rs
src/buffer/: mod.rs
src/effects/: mod.rs
src/errors/: mod.rs
src/image_widget/: mod.rs
src/layout/: mod.rs
src/logger/: mod.rs
src/markdown/: mod.rs
src/popups/: mod.rs
src/prompts/: mod.rs
src/qrcode/: mod.rs
src/scrollview/: mod.rs
src/style/: mod.rs
src/terminal/: mod.rs
src/text/: mod.rs
src/textarea/: mod.rs
src/tree_widget/: mod.rs
src/widgets/: barchart.rs  block.rs  calendar.rs  canvas_widget.rs  clear.rs  gauge.rs  list.rs  mod.rs  paragraph.rs  scrollbar.rs  sparkline.rs  table.rs  tabs.rs
tests/python/: test_pyratatui.py
tests/rust/: lib_tests.rs
tutorial/async_updates/: index.html
tutorial/effect_workflow/: index.html
tutorial/progress_bar/: index.html
tutorial/quickstart/: index.html
tutorial/table_updates/: index.html
tutorial/tachyonfx_effects/: index.html
