[package]
name = "pyratatui"
version = "0.1.0"
edition = "2021"
authors = ["pyratatui contributors"]
description = "Production-grade Python bindings for ratatui 0.30.0 — the Rust TUI engine"
license = "MIT"
repository = "https://github.com/pyratatui/pyratatui"
readme = "README.md"
keywords = ["ratatui", "tui", "terminal", "python", "pyo3"]
categories = ["api-bindings", "command-line-interface"]

[lib]
name = "pyratatui"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py310"] }
ratatui   = { version = "0.29", features = ["all-widgets", "crossterm"] }
tachyonfx = { version = "0.11" }
crossterm = "0.29"
tokio     = { version = "1", features = ["full"] }

[features]
default = []

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[dev-dependencies]
pyo3 = { version = "0.23", features = ["abi3-py310"] }
