[package]
name    = "pyratatui"
version = "0.2.0"
edition = "2021"
authors = ["pyratatui contributors"]
description = """
🚀 PyRatatui — Professional Python bindings for ratatui 0.30 🦀
High-performance Rust TUI engine for building rich terminal applications.
"""
license    = "MIT"
repository = "https://github.com/pyratatui/pyratatui"
readme     = "README.md"
keywords   = ["ratatui", "tui", "terminal", "python", "pyo3"]
categories = ["api-bindings", "command-line-interface"]

[lib]
name       = "pyratatui"
crate-type = ["cdylib"]

[dependencies]
pyo3     = { version = "0.28.2", features = ["abi3-py310"] }
crossterm = "0.29"
tokio    = { version = "1", features = ["full"] }

# ── Ratatui 0.30 ────────────────────────────────────────────────────────────
# The main ratatui crate re-exports everything from the new modular workspace
# (ratatui-core, ratatui-widgets, ratatui-crossterm, …).
# Application developers continue to depend on the top-level `ratatui` crate.
# `crossterm_0_29` pins the bundled crossterm backend version so third-party
# widget crates compiled against crossterm 0.29 can coexist without conflicts.
ratatui = { version = "0.30", features = ["all-widgets", "crossterm_0_29"] }

# ── Effects ──────────────────────────────────────────────────────────────────
# tachyonfx is part of the ratatui-org (moved to github.com/ratatui/tachyonfx)
# and is actively maintained against ratatui 0.30.
tachyonfx = "0.25.0"

# ── Third-party widget crates (all ratatui 0.30 compatible) ─────────────────
# tui-popup 0.7.x — part of the tui-widgets suite, uses frame.area() / 0.30 API.
tui-popup    = { version = "0.7", features = ["crossterm"] }

# tui-scrollview 0.6.2 — uses StatefulWidget from ratatui 0.30.
tui-scrollview = "0.6.2"

# tui-textarea 0.7.x — rhysd's actively-maintained crate.
# tui-textarea 0.7 targets ratatui ^0.29 (= >=0.29, <0.30), which brings in
# ratatui 0.29 as a separate dep alongside ratatui 0.30.
# We add ratatui_compat so we can name the 0.29 types and bridge via transmute.
tui-textarea = "0.7.0"

# Compatibility shim: gives us a named handle to ratatui 0.29 so that
# tui-textarea's Widget/Style/Block types can be used from our code.
# Cargo will unify this with tui-textarea's own ratatui 0.29 dep.
ratatui_compat = { package = "ratatui", version = ">=0.29, <0.30" }

# ── QR codes ─────────────────────────────────────────────────────────────────
# tui-qrcode 0.2.2 targets ratatui-core ^0.1 / ratatui ^0.30 — fully compatible.
# `qrcode` crate is kept because callers create QrCode values before the widget.
tui-qrcode = { version = "0.2.2", default-features = false }
qrcode     = { version = "0.14",  default-features = false }

[features]
default = []

[profile.release]
strip          = true
lto            = true
opt-level      = 3
codegen-units  = 1

[dev-dependencies]
pyo3 = { version = "0.28", features = ["abi3-py310"] }
