[package]
name    = "pyratatui"
version = "0.2.1"
edition = "2021"
authors = ["pyratatui contributors"]
description = """
🚀 PyRatatui — Professional Python bindings for ratatui 0.30 🦀
High-performance Rust TUI engine for building rich terminal applications.
"""
license    = "MIT"
repository = "https://github.com/pyratatui/pyratatui"
readme     = "README.md"
keywords   = ["ratatui", "tui", "terminal", "python", "pyo3"]
categories = ["api-bindings", "command-line-interface"]

[lib]
name       = "pyratatui"
crate-type = ["cdylib"]

[dependencies]
pyo3     = { version = "0.28.2", features = ["abi3-py310"] }
crossterm = "0.29"
tokio    = { version = "1", features = ["full"] }

# ── Ratatui 0.30 ─────────────────────────────────────────────────────────────
ratatui = { version = "0.30", features = ["all-widgets", "crossterm_0_29"] }

# ── Effects ───────────────────────────────────────────────────────────────────
tachyonfx = "0.25.0"

# ── Third-party widget crates (all ratatui 0.30 compatible) ──────────────────
tui-popup     = { version = "0.7", features = ["crossterm"] }
tui-scrollview = "0.6.2"
tui-textarea  = "0.7.0"

# Compatibility shim: named handle to ratatui 0.29 for tui-textarea bridging.
ratatui_compat = { package = "ratatui", version = ">=0.29, <0.30" }

# ── QR codes ──────────────────────────────────────────────────────────────────
tui-qrcode = { version = "0.2.2", default-features = false }
qrcode     = { version = "0.14",  default-features = false }

# ── Calendar (time crate required by ratatui widget-calendar) ─────────────────
time = { version = "0.3", features = ["local-offset"] }

# ── New widget integrations ───────────────────────────────────────────────────
# Bar graph widget (uses ratatui-core ^0.1, colorgrad 0.8)
tui-bar-graph = "0.3"
colorgrad     = "0.8"

# Tree widget (uses ratatui-core ^0.1)
tui-tree-widget = "0.24"

# Markdown → Text converter (uses ratatui-core ^0.1)
tui-markdown = "0.3"

# Logger widget (uses ratatui ^0.30 directly)
tui-logger = "0.18"
log        = "0.4"

# Image widget (default-features = false avoids libchafa requirement)
ratatui-image = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }
image         = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[features]
default = []

[profile.release]
strip          = true
lto            = true
opt-level      = 3
codegen-units  = 1

[dev-dependencies]
pyo3 = { version = "0.28", features = ["abi3-py310"] }
